--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Hello World</h1>
+<div class="flex flex-col h-screen">
+  <app-navbar></app-navbar>
+  <main class="flex-grow">
+    <!-- Contenido principal de tu aplicación -->
+  </main>
+  <app-footer></app-footer>
+</div>
