updated color nav-footer

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,12 @@
-<nav class="bg-rose-900 p-4">
+<nav class="bg-gray-500 p-4">
     <div class="container mx-auto flex items-center justify-between">
-        <a href="#" class="text-white font-bold text-xl">Secretaría de Educación del Estado de Zacatecas</a>
-        <ul class="flex space-x-4">
-            <li><a href="#inicio" class="text-white hover:text-black">Inicio</a></li>
-            <li><a href="#alumnos" class="text-white hover:text-black">Alumnos</a></li>
-            <li><a href="#docentes" class="text-white hover:text-black">Docentes</a></li>
-            <li><a href="#aplicaciones" class="text-white hover:text-black">Aplicaciones</a></li>
-        </ul>
+      <a routerLink="/inicio" class="text-white font-bold text-xl hover:text-black cursor-pointer">Secretaría de Educación del Estado de Zacatecas</a>
+      <ul class="flex space-x-4">
+        <li><a routerLink="/inicio" class="text-white hover:text-black cursor-pointer">Inicio</a></li>
+        <li><a routerLink="/alumnos" class="text-white hover:text-black cursor-pointer">Alumnos</a></li>
+        <li><a routerLink="/docentes" class="text-white hover:text-black cursor-pointer">Docentes</a></li>
+        <li><a routerLink="/aplicaciones" class="text-white hover:text-black cursor-pointer">Aplicaciones</a></li>
+      </ul>
     </div>
-</nav>
+  </nav>
+  
