--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-rose-900 text-white p-4">
+<footer class="bg-gray-500 text-white p-4">
     <div class="container mx-auto text-center">
         <p>&copy; Secretaría de Educación del Estado de Zacatecas 2021 - 2027</p>
     </div>
