--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col h-screen">
   <app-navbar></app-navbar>
   <main class="flex-grow">
-    <!-- Contenido principal de tu aplicación -->
+    <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
 </div>
