--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="bg-gray-500 p-4">
     <div class="container mx-auto flex items-center justify-between">
-      <a routerLink="/inicio" class="text-white font-bold text-xl  cursor-pointer">Secretaría de Educación del Estado de Zacatecas</a>
+      <a routerLink="/" class="text-white font-bold text-xl  cursor-pointer">Secretaría de Educación del Estado de Zacatecas</a>
       <ul class="flex space-x-4">
-        <li><a routerLink="/inicio" class="text-white hover:text-black cursor-pointer">Inicio</a></li>
+        <li><a routerLink="/" class="text-white hover:text-black cursor-pointer">Inicio</a></li>
         <li><a routerLink="/alumnos" class="text-white hover:text-black cursor-pointer">Alumnos</a></li>
         <li><a routerLink="/docentes" class="text-white hover:text-black cursor-pointer">Docentes</a></li>
         <li><a routerLink="/aplicaciones" class="text-white hover:text-black cursor-pointer">Aplicaciones</a></li>
