--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,137 @@
-<footer class="bg-gray-500 text-white p-4">
-    <div class="container mx-auto text-center">
-        <p>&copy; Secretaría de Educación del Estado de Zacatecas 2021 - 2027</p>
+<footer class="text-gray-600 body-font">
+    <div
+        class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
+        <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+            <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+                <img src="../../assets/images/logoStandalone24.png" alt="Logotipo" height="86px" />
+            </a>
+        </div>
+        <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
+                    Transparencia
+                </h2>
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Avisos de privacidad</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Plataforma Nacional de Transparencia</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
+                    Admisiones
+                </h2>
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Preinscripciones</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Información complementaria</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Ubicación de escuelas</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
+                    Alumnos
+                </h2>
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Calificaciones y certificados</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Equivalencias y revalidaciones</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Escuelas incorporadas</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Certificación y profesiones</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Libros de texto</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
+                    Administrativo
+                </h2>
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Control de asistencia e incidencias</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Adquisiciones y servicios</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">CFDI</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Ubicación de escuelas</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Directorio y formatos laborales</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Almacenes e inventarios</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Sistema institucional de archivos</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Comités</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Forte</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Seguridad e higiene</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-600 hover:text-gray-800">Denuncias y marco jurídico</a>
+                    </li>
+                </nav>
+            </div>
+            
+        </div>
+    </div>
+    <div class="bg-gray-100">
+        <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+            <p class="text-gray-500 text-sm text-center sm:text-left">
+                &copy; Secretaría de Educación del Estado de Zacatecas 2021 - 2027
+            </p>
+            <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+                <a href="https://www.facebook.com/educacion.zac/" target="_blank"
+                    class="text-gray-500 hover:scale-110 ease-in-out">
+                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        class="w-5 h-5" viewBox="0 0 24 24">
+                        <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                    </svg>
+                </a>
+                <a href="https://twitter.com/SEDUZAC" target="_blank"
+                    class="ml-3 text-gray-500 hover:scale-110 ease-in-out">
+                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        class="w-5 h-5" viewBox="0 0 24 24">
+                        <path
+                            d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                        </path>
+                    </svg>
+                </a>
+                <a href="https://www.instagram.com/seduzac/" target="_blank"
+                    class="ml-3 text-gray-500 hover:scale-110 ease-in-out">
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                        stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                        <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                        <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                    </svg>
+                </a>
+            </span>
+        </div>
     </div>
 </footer>
