--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,194 @@
-<p>home works!</p>
+<!-- Sección de Slider -->
+
+
+
+<div id="animation-carousel" class="relative w-full" data-carousel="static">
+    <!-- Carousel wrapper -->
+    <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+         <!-- Item 1 -->
+        <div class="hidden duration-200 ease-linear" data-carousel-item>
+            <img src="../../assets/images/bannerConvocatoria1.jpg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+        </div>
+        <!-- Item 2 -->
+        <div class="hidden duration-200 ease-linear" data-carousel-item>
+            <img src="../../assets/images/bannerConvocatoria2.jpg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+        </div>
+        <!-- Item 3 -->
+        <div class="hidden duration-200 ease-linear" data-carousel-item="active">
+            <img src="../../assets/images/bannerIngeni.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+        </div>
+    </div>
+    <!-- Slider controls -->
+    <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+            </svg>
+            <span class="sr-only">Previous</span>
+        </span>
+    </button>
+    <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+            </svg>
+            <span class="sr-only">Next</span>
+        </span>
+    </button>
+</div>
+
+
+
+<!-- Sección de Publicaciones -->
+
+<section class="text-gray-600 body-font overflow-hidden">
+    <div class="container px-5 py-24 mx-auto">
+      <div class="-my-8 divide-y-2 divide-gray-100">
+        <div class="py-8 flex flex-wrap md:flex-nowrap">
+          <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+            <span class="font-semibold title-font text-gray-700">Declaración</span>
+            <span class="mt-1 text-gray-500 text-sm">25/03/2024</span>
+          </div>
+          <div class="md:flex-grow">
+            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">Declaración de Modificación de Situación Patrimonial y de Intereses.</h2>
+            <p class="leading-relaxed">Esta declaración se realiza en cumplimiento de lo establecido en los artículos 108 de la Constitución y 32, 33, 46 y 49, fracción IV de la Ley General de Responsabilidades Administrativas. Los servidores públicos deben utilizar el sistema DeclaraNetPLUS para presentar esta declaración, siguiendo las normas e instructivos establecidos.</p>
+            <a class="text-red-500 inline-flex items-center mt-4">Documento
+              <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M5 12h14"></path>
+                <path d="M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="py-8 flex flex-wrap md:flex-nowrap">
+          <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+            <span class="font-semibold title-font text-gray-700">Convocatoria</span>
+            <span class="mt-1 text-gray-500 text-sm">05/03/2024</span>
+          </div>
+          <div class="md:flex-grow">
+            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">Convocatoria de Nuevo Ingreso de Instituciones Formadoras de Docentes, ciclo escolar 2024-2025.</h2>
+            <p class="leading-relaxed">Proceso mediante el cual se invita a los egresados de instituciones educativas del país, tanto públicas como particulares con Reconocimiento de Validez Oficial, a participar en los Concursos de Oposición para el Ingreso a la Educación Básica.</p>
+            <a class="text-red-500 inline-flex items-center mt-4">Documento
+              <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M5 12h14"></path>
+                <path d="M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="py-8 flex flex-wrap md:flex-nowrap">
+          <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+            <span class="font-semibold title-font text-gray-700">Convocatoria</span>
+            <span class="text-sm text-gray-500">05/03/2024</span>
+          </div>
+          <div class="md:flex-grow">
+            <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">Convocatoria Permutas de adscripción de estado a estado 2024-2025.</h2>
+            <p class="leading-relaxed">Durante este período, los trabajadores pueden presentar sus solicitudes para cambiar de estado de adscripción, lo que les permite trasladarse a una ubicación diferente para desempeñar sus funciones laborales. Es importante seguir las instrucciones y los plazos establecidos en la convocatoria para participar en este proceso de permuta.</p>
+            <a class="text-red-500 inline-flex items-center mt-4">Documento
+              <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M5 12h14"></path>
+                <path d="M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+<!-- Sección de Contacto -->
+
+<section class="text-gray-600 body-font relative">
+  <div class="container px-5 py-24 mx-auto flex sm:flex-nowrap flex-wrap">
+    <div
+      class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative"
+    >
+      <iframe
+        width="100%"
+        height="100%"
+        class="absolute inset-0"
+        frameborder="0"
+        title="map"
+        marginheight="0"
+        marginwidth="0"
+        scrolling="no"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3679.223439950211!2d-102.53692080101925!3d22.757087717246964!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86824ecdd666d6cf%3A0x343f88777e34c093!2sSecretaria%20de%20Educaci%C3%B3n%20de%20Zacatecas!5e0!3m2!1ses-419!2smx!4v1711483344224!5m2!1ses-419!2sm"
+        style="filter: grayscale(1) contrast(1.2) opacity(0.4)"
+      ></iframe>
+      <div class="bg-white relative flex flex-wrap py-6 rounded shadow-md">
+        <div class="lg:w-1/2 px-6">
+          <h2
+            class="title-font font-semibold text-gray-900 tracking-widest text-xs"
+          >
+            Dirección
+          </h2>
+          <p class="mt-1">
+            José López Portillo, Fraccionamiento de las Dependencias Federales, 98618 Guadalupe, Zac.
+          </p>
+        </div>
+        <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
+          <h2
+            class="title-font font-semibold text-gray-900 tracking-widest text-xs"
+          >
+            Email
+          </h2>
+          <a class="text-red-500 leading-relaxed">ayuda&#64;seduzac.gob.mx</a>
+          <h2
+            class="title-font font-semibold text-gray-900 tracking-widest text-xs mt-4"
+          >
+            Teléfono
+          </h2>
+          <p class="leading-relaxed">492 923 96 00</p>
+        </div>
+      </div>
+    </div>
+    <div
+      class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0"
+    >
+      <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">
+        Contáctanos
+      </h2>
+      <p class="leading-relaxed mb-5 text-gray-600">
+        Llena el siguiente formulario para recibir ayuda.
+      </p>
+      <div class="relative mb-4">
+        <label for="nombre" class="leading-7 text-sm text-gray-600">Nombre</label>
+        <input
+          type="text"
+          id="nombre"
+          name="nombre"
+          class="w-full bg-white rounded border border-gray-300 focus:border-red-500 focus:ring-2 focus:ring-red-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+        />
+      </div>
+      <div class="relative mb-4">
+        <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          class="w-full bg-white rounded border border-gray-300 focus:border-red-500 focus:ring-2 focus:ring-red-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+        />
+      </div>
+      <div class="relative mb-4">
+        <label for="Mensaje" class="leading-7 text-sm text-gray-600"
+          >Mensaje</label
+        >
+        <textarea
+          id="Mensaje"
+          name="Mensaje"
+          class="w-full bg-white rounded border border-gray-300 focus:border-red-500 focus:ring-2 focus:ring-red-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
+        ></textarea>
+      </div>
+      <button
+        class="text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg"
+      >
+        Enviar
+      </button>
+      <p class="text-xs text-gray-500 mt-3">
+        Nos contactaremos contigo a la brevedad.
+      </p>
+    </div>
+  </div>
+</section>
