--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,13 @@
-<nav class="bg-gray-500 p-4">
-    <div class="container mx-auto flex items-center justify-between">
-      <a routerLink="/" class="text-white font-bold text-xl  cursor-pointer">Secretaría de Educación del Estado de Zacatecas</a>
-      <ul class="flex space-x-4">
-        <li><a routerLink="/" class="text-white hover:text-black cursor-pointer">Inicio</a></li>
-        <li><a routerLink="/alumnos" class="text-white hover:text-black cursor-pointer">Alumnos</a></li>
-        <li><a routerLink="/docentes" class="text-white hover:text-black cursor-pointer">Docentes</a></li>
-        <li><a routerLink="/aplicaciones" class="text-white hover:text-black cursor-pointer">Aplicaciones</a></li>
-      </ul>
-    </div>
-  </nav>
-  
+<header class="text-gray-600 body-font">
+  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+    <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+      <img src="../../assets/images/logo24.png" alt="Logotipo" width="224px">
+    </a>
+    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+      <a routerLink="/" class="mr-5 hover:text-gray-900">Inicio</a>
+      <a routerLink="/alumnos" class="mr-5 hover:text-gray-900">Alumnos</a>
+      <a routerLink="/docentes" class="mr-5 hover:text-gray-900">Docentes</a>
+      <a routerLink="/aplicaciones" class="mr-5 hover:text-gray-900">Aplicaciones</a>
+    </nav>
+  </div>
+</header>
