--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,15 +7,15 @@
     <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
          <!-- Item 1 -->
         <div class="hidden duration-200 ease-linear" data-carousel-item>
-            <img src="../../assets/images/bannerConvocatoria1.jpg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+            <img src="" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
         </div>
         <!-- Item 2 -->
         <div class="hidden duration-200 ease-linear" data-carousel-item>
-            <img src="../../assets/images/bannerConvocatoria2.jpg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+            <img src="" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
         </div>
         <!-- Item 3 -->
         <div class="hidden duration-200 ease-linear" data-carousel-item="active">
-            <img src="../../assets/images/bannerIngeni.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+            <img src="" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
         </div>
     </div>
     <!-- Slider controls -->
@@ -37,6 +37,30 @@
     </button>
 </div>
 
+<!-- Sección de Busquedad -->
+
+<div class="flex justify-center items-center px-20">
+    <div class="space-y-5">
+      <div class="flex items-center p-6 space-x-6 bg-white rounded-xl shadow-2xl">
+        <div class="flex bg-gray-100 p-4 w-72 space-x-4 rounded-lg">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 opacity-30" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+          </svg>
+          <input class="bg-gray-100 outline-none" type="text" placeholder="¿Qué desea buscar?" />
+        </div>
+        <div class="flex py-3 px-4 rounded-lg text-gray-500 font-semibold cursor-pointer">
+          <span>Categorias</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+          </svg>
+        </div>
+        <div class="bg-red-900 py-3 px-5 text-white font-semibold rounded-lg hover:shadow-lg transition duration-3000 cursor-pointer">
+          <span>Buscar</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 <!-- Sección de Publicaciones -->
@@ -52,7 +76,7 @@
           <div class="md:flex-grow">
             <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">Declaración de Modificación de Situación Patrimonial y de Intereses.</h2>
             <p class="leading-relaxed">Esta declaración se realiza en cumplimiento de lo establecido en los artículos 108 de la Constitución y 32, 33, 46 y 49, fracción IV de la Ley General de Responsabilidades Administrativas. Los servidores públicos deben utilizar el sistema DeclaraNetPLUS para presentar esta declaración, siguiendo las normas e instructivos establecidos.</p>
-            <a class="text-red-500 inline-flex items-center mt-4">Documento
+            <a class="text-red-900 inline-flex items-center mt-4">Documento
               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
                 <path d="M12 5l7 7-7 7"></path>
@@ -68,7 +92,7 @@
           <div class="md:flex-grow">
             <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">Convocatoria de Nuevo Ingreso de Instituciones Formadoras de Docentes, ciclo escolar 2024-2025.</h2>
             <p class="leading-relaxed">Proceso mediante el cual se invita a los egresados de instituciones educativas del país, tanto públicas como particulares con Reconocimiento de Validez Oficial, a participar en los Concursos de Oposición para el Ingreso a la Educación Básica.</p>
-            <a class="text-red-500 inline-flex items-center mt-4">Documento
+            <a class="text-red-900 inline-flex items-center mt-4">Documento
               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
                 <path d="M12 5l7 7-7 7"></path>
@@ -84,7 +108,7 @@
           <div class="md:flex-grow">
             <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">Convocatoria Permutas de adscripción de estado a estado 2024-2025.</h2>
             <p class="leading-relaxed">Durante este período, los trabajadores pueden presentar sus solicitudes para cambiar de estado de adscripción, lo que les permite trasladarse a una ubicación diferente para desempeñar sus funciones laborales. Es importante seguir las instrucciones y los plazos establecidos en la convocatoria para participar en este proceso de permuta.</p>
-            <a class="text-red-500 inline-flex items-center mt-4">Documento
+            <a class="text-red-900 inline-flex items-center mt-4">Documento
               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
                 <path d="M12 5l7 7-7 7"></path>
@@ -100,95 +124,95 @@
 
 <!-- Sección de Contacto -->
 
-<section class="text-gray-600 body-font relative">
-  <div class="container px-5 py-24 mx-auto flex sm:flex-nowrap flex-wrap">
-    <div
-      class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative"
-    >
-      <iframe
-        width="100%"
-        height="100%"
-        class="absolute inset-0"
-        frameborder="0"
-        title="map"
-        marginheight="0"
-        marginwidth="0"
-        scrolling="no"
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3679.223439950211!2d-102.53692080101925!3d22.757087717246964!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86824ecdd666d6cf%3A0x343f88777e34c093!2sSecretaria%20de%20Educaci%C3%B3n%20de%20Zacatecas!5e0!3m2!1ses-419!2smx!4v1711483344224!5m2!1ses-419!2sm"
-        style="filter: grayscale(1) contrast(1.2) opacity(0.4)"
-      ></iframe>
-      <div class="bg-white relative flex flex-wrap py-6 rounded shadow-md">
-        <div class="lg:w-1/2 px-6">
-          <h2
-            class="title-font font-semibold text-gray-900 tracking-widest text-xs"
-          >
-            Dirección
+<section class="flex justify-center items-center px-20">
+    <div class="container px-5 py-24 mx-auto flex sm:flex-nowrap flex-wrap">
+        <div
+          class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative shadow-2xl"
+        >
+          <iframe
+            width="100%"
+            height="100%"
+            class="absolute inset-0"
+            frameborder="0"
+            title="map"
+            marginheight="0"
+            marginwidth="0"
+            scrolling="no"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3679.223439950211!2d-102.53692080101925!3d22.757087717246964!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86824ecdd666d6cf%3A0x343f88777e34c093!2sSecretaria%20de%20Educaci%C3%B3n%20de%20Zacatecas!5e0!3m2!1ses-419!2smx!4v1711483344224!5m2!1ses-419!2sm"
+            style="filter: grayscale(1) contrast(1.2) opacity(0.4)"
+          ></iframe>
+          <div class="bg-white relative flex flex-wrap py-6 rounded shadow-md">
+            <div class="lg:w-1/2 px-6">
+              <h2
+                class="title-font font-semibold text-gray-900 tracking-widest text-xs"
+              >
+                Dirección
+              </h2>
+              <p class="mt-1">
+                José López Portillo, Fraccionamiento de las Dependencias Federales, 98618 Guadalupe, Zac.
+              </p>
+            </div>
+            <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
+              <h2
+                class="title-font font-semibold text-gray-900 tracking-widest text-xs"
+              >
+                Email
+              </h2>
+              <a class="text-red-900 leading-relaxed">ayuda&#64;seduzac.gob.mx</a>
+              <h2
+                class="title-font font-semibold text-gray-900 tracking-widest text-xs mt-4"
+              >
+                Teléfono
+              </h2>
+              <p class="leading-relaxed">492 923 96 00</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0"
+        >
+          <h2 class="text-gray-900 text-lg mb-1 font-medium title-font ">
+            Contáctanos
           </h2>
-          <p class="mt-1">
-            José López Portillo, Fraccionamiento de las Dependencias Federales, 98618 Guadalupe, Zac.
+          <p class="leading-relaxed mb-5 text-gray-600">
+            Llena el siguiente formulario para recibir ayuda.
+          </p>
+          <div class="relative mb-4">
+            <label for="nombre" class="leading-7 text-sm text-gray-600">Nombre</label>
+            <input
+              type="text"
+              id="nombre"
+              name="nombre"
+              class="w-full bg-white rounded border border-gray-300 focus:border-red-900 focus:ring-2 focus:ring-red-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+            />
+          </div>
+          <div class="relative mb-4">
+            <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="w-full bg-white rounded border border-gray-300 focus:border-red-900 focus:ring-2 focus:ring-red-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+            />
+          </div>
+          <div class="relative mb-4">
+            <label for="Mensaje" class="leading-7 text-sm text-gray-600"
+              >Mensaje</label
+            >
+            <textarea
+              id="Mensaje"
+              name="Mensaje"
+              class="w-full bg-white rounded border border-gray-300 focus:border-red-900 focus:ring-2 focus:ring-red-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
+            ></textarea>
+          </div>
+          <button
+            class="text-white bg-red-800 border-0 py-2 px-6 focus:outline-none hover:shadow-lg transition duration-3000 cursor-pointer rounded text-lg"
+          >
+            Enviar
+          </button>
+          <p class="text-xs text-gray-500 mt-3">
+            Nos contactaremos contigo a la brevedad.
           </p>
         </div>
-        <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
-          <h2
-            class="title-font font-semibold text-gray-900 tracking-widest text-xs"
-          >
-            Email
-          </h2>
-          <a class="text-red-500 leading-relaxed">ayuda&#64;seduzac.gob.mx</a>
-          <h2
-            class="title-font font-semibold text-gray-900 tracking-widest text-xs mt-4"
-          >
-            Teléfono
-          </h2>
-          <p class="leading-relaxed">492 923 96 00</p>
-        </div>
       </div>
-    </div>
-    <div
-      class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0"
-    >
-      <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">
-        Contáctanos
-      </h2>
-      <p class="leading-relaxed mb-5 text-gray-600">
-        Llena el siguiente formulario para recibir ayuda.
-      </p>
-      <div class="relative mb-4">
-        <label for="nombre" class="leading-7 text-sm text-gray-600">Nombre</label>
-        <input
-          type="text"
-          id="nombre"
-          name="nombre"
-          class="w-full bg-white rounded border border-gray-300 focus:border-red-500 focus:ring-2 focus:ring-red-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
-        />
-      </div>
-      <div class="relative mb-4">
-        <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          class="w-full bg-white rounded border border-gray-300 focus:border-red-500 focus:ring-2 focus:ring-red-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
-        />
-      </div>
-      <div class="relative mb-4">
-        <label for="Mensaje" class="leading-7 text-sm text-gray-600"
-          >Mensaje</label
-        >
-        <textarea
-          id="Mensaje"
-          name="Mensaje"
-          class="w-full bg-white rounded border border-gray-300 focus:border-red-500 focus:ring-2 focus:ring-red-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
-        ></textarea>
-      </div>
-      <button
-        class="text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg"
-      >
-        Enviar
-      </button>
-      <p class="text-xs text-gray-500 mt-3">
-        Nos contactaremos contigo a la brevedad.
-      </p>
-    </div>
-  </div>
 </section>
