bug a cursor pointer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
                     Transparencia
                 </h2>
-                <nav class="list-none mb-10">
+                <nav class="list-none mb-10 hover:cursor-pointer">
                     <li>
                         <a class="text-gray-600 hover:text-gray-800">Avisos de privacidad</a>
                     </li>
@@ -24,7 +24,7 @@
                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
                     Admisiones
                 </h2>
-                <nav class="list-none mb-10">
+                <nav class="list-none mb-10 hover:cursor-pointer">
                     <li>
                         <a class="text-gray-600 hover:text-gray-800">Preinscripciones</a>
                     </li>
@@ -40,7 +40,7 @@
                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
                     Alumnos
                 </h2>
-                <nav class="list-none mb-10">
+                <nav class="list-none mb-10 hover:cursor-pointer">
                     <li>
                         <a class="text-gray-600 hover:text-gray-800">Calificaciones y certificados</a>
                     </li>
@@ -62,7 +62,7 @@
                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">
                     Administrativo
                 </h2>
-                <nav class="list-none mb-10">
+                <nav class="list-none mb-10 hover:cursor-pointer">
                     <li>
                         <a class="text-gray-600 hover:text-gray-800">Control de asistencia e incidencias</a>
                     </li>
