navbar fixed top

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col h-screen">
   <app-navbar></app-navbar>
-  <main class="flex-grow">
+  <main class="flex-grow pt-20">
     <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
